# BrytecConfig

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
BrytecConfig/: CMakeLists.txt  imgui.ini  premake5.lua
BrytecConfig/data/configs/: Mega Test.btconfig  Node Tests.btconfig  Nova 2025.btconfig  Nova Input Module Rev 2.btconfig  Nova Motor Board.btconfig  Nova Rev 5 Power Modules.btconfig  Nova dash rev2.btconfig  Nova.btconfig  Switch Panel Rev 1 Testing.btconfig  Uno Test.btconfig  can input test.btconfig  color test.btconfig  rev 5 testing.btconfig  test.btconfig
BrytecConfig/data/modules/: Arduino Mega.btmodule  Input Module Rev 1.btmodule  Input Module Rev 2 - 5V mod.btmodule  Input Module Rev 2.btmodule  Input Module.btmodule  Motor Module Rev 1.btmodule  Nucleo Board.btmodule  Output Module.btmodule  Output Module.yaml  Power Module Rev 2.btmodule  Power Module Rev 3.btmodule  Power Module Rev 5.btmodule  Screen Board Rev 2.btmodule  Screen Board.btmodule  Switch Panel Rev 1.btmodule  Test Module.yaml  Touch Button Module 1.btmodule  Uno.btmodule  newMod.yaml  testMod.yaml
BrytecConfig/data/node groups/: auto cancel turn signal.btnodes  big.btnodes  count and hold to reset.btnodes  high beam toggle.btnodes  push on hold to off.btnodes  tail lights.btnodes  test.btnodes
BrytecConfig/docs/: mkdocs.yml
BrytecConfig/docs/docs/: NodeBasics.md  index.md
BrytecConfig/docs/docs/nodes/: .BlankNodeTemplate.md  AndNode.md  ColorNode.md  CompareNode.md  CounterNode.md  CurveNode.md  DelayNode.md  FinalValueNode.md  InitialValueNode.md  InterpolateNode.md  InvertNode.md  MapValueNode.md  MathNode.md  NodeGroupNode.md  OnOffNode.md  OrNode.md  PinCurrentNode.md  SwitchNode.md  ToggleNode.md  TwoStageNode.md  ValueNode.md
BrytecConfig/docs/docs/style/: style.css
BrytecConfig/src/: AppManager.cpp  AppManager.h  DesktopSimulationBoard.cpp  EBrytecConfigCustom.h  main.cpp
BrytecConfig/src/communication/: CanBusStream.cpp  CanBusStream.h  ModuleDebug.cpp  ModuleDebug.h
BrytecConfig/src/communication/net/: Client.cpp  Client.h  ConnectionHandler.cpp  ConnectionHandler.h  NetManager.cpp  NetManager.h
BrytecConfig/src/communication/usb/: Usb.cpp  UsbManager.cpp  UsbManager.h
BrytecConfig/src/data/: CanBus.cpp  CanBus.h  Config.cpp  Config.h  IOTypes.cpp  IOTypes.h  InternalPin.cpp  InternalPin.h  Module.cpp  Module.h  Node.cpp  Node.h  NodeGroup.cpp  NodeGroup.h  PhysicalPin.cpp  PhysicalPin.h  Pin.cpp  Pin.h  Selectable.h
BrytecConfig/src/data/Nodes/: AndNode.cpp  AndNode.h  CanBusNode.cpp  CanBusNode.h  CompareNode.cpp  CompareNode.h  ConvertNode.cpp  ConvertNode.h  CurveNode.cpp  CurveNode.h  DelayNode.cpp  DelayNode.h  FinalValueNode.cpp  FinalValueNode.h  InitialValueNode.cpp  InitialValueNode.h  InvertNode.cpp  InvertNode.h  MapValueNode.cpp  MapValueNode.h  MathNode.cpp  MathNode.h  NodeGroupNode.cpp  NodeGroupNode.h  OnOffNode.cpp  OnOffNode.h  OrNode.cpp  OrNode.h  PushButtonNode.cpp  PushButtonNode.h  SwitchNode.cpp  SwitchNode.h  ToggleNode.cpp  ToggleNode.h  TwoStageNode.cpp  TwoStageNode.h  ValueNode.cpp  ValueNode.h
BrytecConfig/src/embedded/: Config.h  NodeVariant.cpp  NodeVariant.h  Nodes.cpp  Nodes.h  NodesVector.cpp  NodesVector.h
BrytecConfig/src/fonts/: droidsans.cpp  fa-solid-900.cpp
BrytecConfig/src/gui/: CommunicationModals.cpp  CommunicationModals.h  GraphWindow.cpp  GraphWindow.h  MainWindow.cpp  MainWindow.h  ModuleBuilderWindow.cpp  ModuleBuilderWindow.h  ModuleDebugWindow.cpp  ModuleDebugWindow.h  ModuleWindow.cpp  ModuleWindow.h  MonitorWindow.cpp  MonitorWindow.h  NodeGroupWindow.cpp  NodeGroupWindow.h  NodeUI.cpp  NodeUI.h  NodeWindow.cpp  NodeWindow.h  NotificationWindow.cpp  NotificationWindow.h  PropertiesWindow.cpp  PropertiesWindow.h  SerialWindow.cpp  SerialWindow.h  SettingsWindow.cpp  SettingsWindow.h
BrytecConfig/src/gui/Nodes/: AndNodeUI.cpp  AndNodeUI.h  CanBusNodeUI.cpp  CanBusNodeUI.h  CompareNodeUI.cpp  CompareNodeUI.h  ConvertNodeUI.cpp  ConvertNodeUI.h  CurveNodeUI.cpp  CurveNodeUI.h  DelayNodeUI.cpp  DelayNodeUI.h  FinalValueNodeUI.cpp  FinalValueNodeUI.h  InitialValueNodeUI.cpp  InitialValueNodeUI.h  InvertNodeUI.cpp  InvertNodeUI.h  MapValueNodeUI.cpp  MapValueNodeUI.h  MathNodeUI.cpp  MathNodeUI.h  NodeGroupNodeUI.cpp  NodeGroupNodeUI.h  OnOffNodeUI.cpp  OnOffNodeUI.h  OrNodeUI.cpp  OrNodeUI.h  PushButtonNodeUI.cpp  PushButtonNodeUI.h  SwitchNodeUI.cpp  SwitchNodeUI.h  ToggleNodeUI.cpp  ToggleNodeUI.h  TwoStageNodeUI.cpp  TwoStageNodeUI.h  ValueNodeUI.cpp  ValueNodeUI.h
BrytecConfig/src/usb/: Usb.cpp  Usb.h  UsbManager.cpp  UsbManager.h
BrytecConfig/src/utils/: BinarySerializer.cpp  BinarySerializer.h  Colors.h  ConfigSerializer.cpp  ConfigSerializer.h  DefaultPaths.h  FileDialogs.cpp  FileDialogs.h  ModuleBuilder.cpp  ModuleBuilder.h  ModuleSerializer.cpp  ModuleSerializer.h  NodeGroupSerializer.cpp  NodeGroupSerializer.h  UUID.cpp  UUID.h
