add_executable(BrytecConfig
                src/main.cpp              
                src/AppManager.cpp
                src/AppManager.h
                src/DesktopSimulationBoard.cpp
                src/communication/net/Client.cpp
                src/communication/net/Client.h
                src/communication/net/ConnectionHandler.cpp
                src/communication/net/ConnectionHandler.h
                src/communication/net/NetManager.cpp
                src/communication/net/NetManager.h
                src/communication/usb/Usb.cpp
                src/communication/usb/Usb.h
                src/communication/usb/UsbManager.cpp
                src/communication/usb/UsbManager.h
                src/communication/CanBusStream.cpp
                src/communication/CanBusStream.h
                src/communication/ModuleDebug.cpp
                src/communication/ModuleDebug.h
                src/data/CanBus.cpp
                src/data/CanBus.h
                src/data/Config.cpp
                src/data/Config.h
                src/data/InternalPin.cpp
                src/data/InternalPin.h
                src/data/Module.cpp
                src/data/Module.h
                src/data/Node.cpp
                src/data/Node.h
                src/data/NodeGroup.cpp
                src/data/NodeGroup.h
                src/data/PhysicalPin.cpp
                src/data/PhysicalPin.h
                src/data/Pin.cpp
                src/data/Pin.h
                src/data/Selectable.h
                src/gui/CommunicationModals.cpp
                src/gui/CommunicationModals.h
                src/gui/GraphWindow.cpp
                src/gui/GraphWindow.h
                src/gui/MainWindow.cpp
                src/gui/MainWindow.h
                src/gui/ModuleBuilderWindow.cpp
                src/gui/ModuleBuilderWindow.h
                src/gui/ModuleDebugWindow.cpp
                src/gui/ModuleDebugWindow.h
                src/gui/ModuleWindow.cpp
                src/gui/ModuleWindow.h
                src/gui/MonitorWindow.cpp
                src/gui/MonitorWindow.h
                src/gui/NodeGroupWindow.cpp
                src/gui/NodeGroupWindow.h
                src/gui/NodeUI.cpp
                src/gui/NodeUI.h
                src/gui/NodeWindow.cpp
                src/gui/NodeWindow.h
                src/gui/NotificationWindow.cpp
                src/gui/NotificationWindow.h
                src/gui/PropertiesWindow.cpp
                src/gui/PropertiesWindow.h
                src/gui/SettingsWindow.cpp
                src/gui/SettingsWindow.h
                src/utils/BinarySerializer.cpp
                src/utils/BinarySerializer.h
                src/utils/Colors.h
                src/utils/ConfigSerializer.cpp
                src/utils/ConfigSerializer.h
                src/utils/FileDialogs.cpp
                src/utils/FileDialogs.h
                src/utils/ModuleSerializer.cpp
                src/utils/ModuleSerializer.h
                src/utils/NodeGroupSerializer.cpp
                src/utils/NodeGroupSerializer.h
                src/utils/UUID.cpp
                src/utils/UUID.h
                )

target_include_directories(BrytecConfig PUBLIC
                           "${CMAKE_CURRENT_SOURCE_DIR}/src"
                           "vendor/yaml-cpp/include"
                           "vendor/glfw/include"
                           "vendor/fontawesome"
                           "vendor/serial/include"
                           )

set(BrytecCustomConfigDir ${CMAKE_CURRENT_SOURCE_DIR}/src)
add_subdirectory(src/BrytecConfigEmbedded)
add_subdirectory(vendor/yaml-cpp)
add_subdirectory(vendor/glfw)
add_subdirectory(vendor/glad)
add_subdirectory(vendor/imgui)
add_subdirectory(vendor/nativefiledialog)
add_subdirectory(vendor/imnodes)
add_subdirectory(vendor/serial)
add_subdirectory(vendor/asio)
add_subdirectory(vendor/implot)

target_link_libraries(BrytecConfig PUBLIC 
                        BrytecConfigEmbedded
                        yaml-cpp
                        glfw
                        glad
                        imgui
                        nativefiledialog
                        imnodes
                        serial
                        asio
                        implot
                        )